add database integrated

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,11 @@
 {
   "specialization": {},
+  "databaseConfig": {
+    "host": "localhost",
+    "database": "Confucius",
+    "username": "cat",
+    "password": "123456"
+  },
   "middleware": {
     "static": {
       "module": {
