--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express": "^4.12.2",
     "kraken-devtools": "^1.2.1",
     "kraken-js": "^1.0.3",
+    "mysql": "^2.8.0",
     "passport": "^0.2.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^3.4.1"
   },
   "devDependencies": {
     "mocha": "^1.18.0",
