--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "Confucius",
-  "version": "0.0.1",
-  "description": "Project for moral educational management",
-  "author": "Destec",
-  "main": "index.js",
-  "scripts": {
-    "test": "grunt test",
-    "build": "grunt build",
-    "all": "npm run build && npm run test"
-  },
+  "name": "sailstest",
+  "private": true,
+  "version": "0.0.0",
+  "description": "a Sails application",
+  "keywords": [],
   "dependencies": {
-    "express": "^4.12.2",
-    "kraken-devtools": "^1.2.1",
-    "kraken-js": "^1.0.3",
-    "mysql": "^2.8.0",
-    "passport": "^0.2.2",
-    "passport-local": "^1.0.0",
-    "sequelize": "^3.4.1"
+    "ejs": "~0.8.4",
+    "grunt": "0.4.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
+    "rc": "~0.5.0",
+    "sails": "~0.11.0",
+    "sails-disk": "~0.10.0"
   },
-  "devDependencies": {
-    "mocha": "^1.18.0",
-    "supertest": "^0.9.0"
-  }
+  "scripts": {
+    "debug": "node debug app.js",
+    "start": "node app.js"
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Catalystx/sailstest.git"
+  },
+  "author": "Catalystx",
+  "license": ""
 }
