--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "~4.12.0",
-    "serve-favicon": "~2.2.0",
-    "morgan": "~1.5.0",
-    "cookie-parser": "~1.3.3",
     "body-parser": "~1.12.0",
     "compression": "~1.4.1",
-    "method-override": "~2.3.0",
+    "cookie-parser": "~1.3.3",
+    "express": "~4.12.0",
+    "express-handlebars": "~1.2.1",
     "glob": "~4.4.1",
-    "sequelize": "~2.0.3",
+    "method-override": "~2.3.0",
+    "moment": "^2.10.6",
+    "morgan": "~1.5.0",
     "mysql": "~2.5.3",
-    "express-handlebars": "~1.2.1"
+    "sequelize": "~2.0.3",
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "coffee-script": "~1.9.1",
