--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.12.0",
     "compression": "~1.4.1",
     "cookie-parser": "~1.3.3",
+    "cookie-session": "^1.2.0",
     "express": "~4.12.0",
     "express-handlebars": "~1.2.1",
     "glob": "~4.4.1",
