--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.12.0",
     "express-handlebars": "~1.2.1",
     "glob": "~4.4.1",
+    "lodash": "^3.10.1",
     "method-override": "~2.3.0",
     "moment": "^2.10.6",
     "morgan": "~1.5.0",
